fix voucher overview overlap and fix email confirmation

--- a/src/sources/forus-webshop-zuidhorn/scss/style.scss
+++ b/src/sources/forus-webshop-zuidhorn/scss/style.scss
@@ -3063,6 +3063,11 @@ body {
             z-index: 1;
             width: 100%;
             margin-left: -340px;
+
+            &:first-child {
+                margin-left: 0;
+                padding-left: 0;
+            }
         }
 
         &.no-aside {
@@ -3200,7 +3205,7 @@ body {
             position: relative;
             transition: .4s;
             display: block;
-            height: 150px;
+            min-height: 150px;
             cursor: default;
 
             .voucher-image {
@@ -3209,7 +3214,7 @@ body {
                 background-size: cover;
                 background-position: 50%;
                 width: 150px;
-                height: 150px;
+                min-height: inherit;
 
                 img {
                     border-radius: inherit;
@@ -3217,7 +3222,7 @@ body {
                     width: 150px;
                     padding: 20px;
                 }
-            } 
+            }
 
             .voucher-details {
                 float: left;
@@ -3234,34 +3239,36 @@ body {
                     color: #282b39;
                     margin-bottom: 10px;
                 }
-                
+
                 .voucher-value {
                     font: 700 24px $bf;
-                    color: $bc_2;
+                    color: #315efd;
                 }
             }
-            
+
             .voucher-overview {
                 float: right;
                 width: 230px;
                 border-left: 1px solid #d4d9dd;
-                padding: 25px;
-                height: 150px;
+                padding: 20px 25px;
+                min-height: inherit;
                 position: relative;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
 
                 .voucher-overview-item {
-                    margin-bottom: 15px;
+                    margin-bottom: 10px;
                     float: left;
                     width: 100%;
 
                     .voucher-overview-label {
                         font: 400 10px/12px $bf;
                         color: #646f79;
-                        margin-bottom: 10px;
                     }
 
                     .voucher-overview-value {
-                        font: 600 16px/20px $bf;
+                        font: 600 15px/17px $bf;
                         color: #282b39;
 
                         small {
@@ -3272,11 +3279,12 @@ body {
                         }
                     }
 
+                    &:last-of-type,
                     &:last-child {
                         margin-bottom: 0;
                     }
                 }
-                
+
                 &>.button {
                     @include float_center();
                     padding-left: 50px;
